--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "anhskohbo/no-captcha": "^3.7",
         "guzzlehttp/guzzle": "^7.2",
         "kreait/firebase-php": "^7.22",
         "laravel/framework": "^10.0",
