--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "kreait/firebase-php": "^7.22",
         "laravel/framework": "^10.0",
+        "laravel/reverb": "^1.6",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8"
     },
